Changed name and type of fileds

--- a/force-app/main/default/classes/UsersPerPage.cls
+++ b/force-app/main/default/classes/UsersPerPage.cls
@@ -1,28 +1,30 @@
 public class UsersPerPage {
 
-	public class Ad {
+	public class AdditionInfo {
 		public String company;
 		public String url;
 		public String text;
 	}
 
-	public class Data {
+	public class UitUser {
 		public Integer id;
 		public String email;
 		public String first_name;
 		public String last_name;
-		public String avatar;
+        public String avatar;
 	}
 
 	public Integer page;
 	public Integer per_page;
 	public Integer total;
 	public Integer total_pages;
-	public List<Data> data;
-	public Ad ad;
+	public List<UitUser> uit_users;
+	public AdditionInfo addition_info;
 
 	
-	public static UsersPerPage parse(String json) {
-		return (UsersPerPage) System.JSON.deserialize(json, UsersPerPage.class);
+	public static UsersPerPage parse(String jsonString) {
+        jsonString = jsonString.replace('"ad":', '"addition_info":');
+        jsonString = jsonString.replace('"data":', '"uit_users":');
+		return (UsersPerPage) System.JSON.deserialize(jsonString, UsersPerPage.class);
 	}
 }
