--- a/force-app/main/default/classes/UserImportServiceClass.cls
+++ b/force-app/main/default/classes/UserImportServiceClass.cls
@@ -2,6 +2,6 @@ public with sharing class UserImportServiceClass {
 
     @AuraEnabled
     public static void importUsers() {
-        Database.executeBatch(new DataImportBatch());
+        Database.executeBatch(new DataImportBatch(), 1);
     }
 }
